Fix overflow styles

--- a/hw-task3/src/components/PhotoCrop/PhotoCrop.css
+++ b/hw-task3/src/components/PhotoCrop/PhotoCrop.css
@@ -12,7 +12,7 @@
   height: 300px;
   overflow: hidden;
   border-radius: 50%;
-  border: 1px darkslateblue dashed;
+  border: none;
 
   backface-visibility: hidden;
   transform: translate3d(0, 0, 0);
