--- a/hw-task3/src/components/PhotoResult/PhotoResult.css
+++ b/hw-task3/src/components/PhotoResult/PhotoResult.css
@@ -7,5 +7,6 @@
 }
 
 .PhotoResult__text {
+  word-break: break-all;
   padding: 0 20px;
 }
